2010-08-12  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/math.h: replace previous versions of floor,
	abs, exp, ceil, ceiling with versions generated by the SUGAR_MATH_1
	macro

2010-08-11  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/vector.h: Vector gains constructor
	taking size and function pointers, acting as generators :

	   Vector( const int& siz, stored_type (*gen)(void), bool seed = true )

	   template <typename U1>
    	   Vector( const int& siz, stored_type (*gen)(U1), const U1& u1,
	           bool seed = true)

    	   template <typename U1, typename U2>
    	   Vector( const int& siz, stored_type (*gen)(U1,U2), const U1& u1, 
	           const U2& u2, bool seed = true)

    	so that for example :

    	   NumericVector( 10, norm_rand ) 

	generates a N(0,1) vector of size 10

	* inst/include/Rcpp/stats/random/rlnorm.h: Added rlnorm and rlnorm_
	* inst/include/Rcpp/stats/random/rgamma.h: Added rgamma and rgamma_
	* inst/include/Rcpp/stats/random/rt.h: Added rt and rt_
	* inst/include/Rcpp/stats/random/rbinom.h: Added rbinom and rbinom_
	* inst/include/Rcpp/stats/random/rnchisq.h: Added rnchisq and rnchisq_
	* inst/include/Rcpp/stats/random/rgeom.h: Added rgeom and rgeom_
	* inst/include/Rcpp/stats/random/rhyper.h: Added rhyper and rhyper_
	* inst/include/Rcpp/stats/random/rnbinom_mu.h: Added rnbinom_mu and rnbinom_mu_
	* inst/include/Rcpp/stats/random/rnbinom.h: Added rnbinom and rnbinom_
	* inst/include/Rcpp/stats/random/rpois.h: Added rpois and rpois_
	* inst/include/Rcpp/stats/random/rweibull.h: Added rweibull and rweibull_
	* inst/include/Rcpp/stats/random/rlogis.h: Added rlogis and rlogis_
	* inst/include/Rcpp/stats/random/rwilcox.h: Added rwilcox and rwilcox_
	* inst/include/Rcpp/stats/random/rsignrank.h: Added rsignrank and rsignrank_

	* inst/include/Rcpp/stats/random/rnorm.h: some optimization
	* inst/include/Rcpp/stats/random/rf.h: calculate n2/n1 just once